# optimus

./: .gitignore  KERNEL.md  README.md  pyproject.toml
.opencode/: prime-gpu-ledger.md
data/: countdown_generated_1200_seed20260507.json
docs/: activation_spectral_p32_a100.md  api.md  backend_parity_gate_current_p64.md  backend_parity_gate_p64_tokenized_vllm.md  backend_step_and_rollout_parity_p64.md  backend_token_replay_smoke.md  evaluation.md  family_state_provenance_audit_current.md  full_gaussian_parity.md  full_model_lazy_kernel_design.md  gpu_suite.md  index.md  local_vs_upstream_countdown_diagnosis.md  lora_family_sweep_p16_default_a100.md  optimus_design.md  paper_reproduction_boundary.md  parity_completion_audit.md  power_subspace_ab_promptrobust.md  prime_gpu_runbook.md  projected_bridge_smoke_p16_a100.md  qproj_c2_corrected_dense_referenced_multirun_a100.md  qproj_c2_prompt_confirmation_a100.md  qproj_c2_target_scale_audit.md  qproj_c2_vllm_shortlist_p64_a100.md  release_checklist.md  selector_union_audit_5x_p64.md  sgd_rlvr_sparse_updates.md  spectral_vllm_confirmation.md  spectral_vllm_confirmation_p16_a100.md  subspace_implementation_roadmap.md  upstream_official_p32_smoke.md  vllm_shortlist_sparse_d0p125_p32_a100.md
experiments/: LESSONS.md  cuda-event-timing-v11.md  packed-qv-counter-v7.md  qx-counter-fused-v8.md  row-mapping-cache-v10.md  subspace-delta-kernel-ablation-v4.md  summary.md  triton-counter-expand-v1.md  triton-counter-inplace-v3.md  vllm-inplace-parity-postfix-v5.md  vllm-target-output-drift-v6.md
optimus/: __init__.py  cli.py  defaults.py
randopt_lora_lab/: __init__.py  adaptive.py  aggregate_lora.py  backend_contract.py  backend_next_token_probe.py  backend_output_diff.py  backend_parity_gate.py  backend_rollout_ablation_report.py  backend_rollout_probe.py  backend_step_parity_probe.py  backend_token_replay_probe.py  backends.py  cap_stability.py  compare_backends.py  compare_halving.py  confirmation_economics.py  countdown.py  dense_reference_confirmation.py  dense_referenced_multirun_gate.py  dense_space.py  drift_parity.py  experiments.py  family_state_provenance_audit.py  family_sweep_report.py  gaussian_parity.py  goal_audit.py  logit_drift.py  lora_space.py  make_countdown_data.py  multirun_gate.py  norm_audit.py  parity_report.py  prompt_ensemble_robustness.py  prompt_robustness.py  prompt_variants.py  proposal_audit.py  rank_sweep_report.py  replay_manifest.py  report.py  reproduction_audit.py  (+22 more)
(+857 files in other folders)
