[project]
name = "optimus"
version = "0.1.0"
description = "Zeroth-order LoRA search infrastructure for large language models."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "lora", "zeroth-order-optimization", "vllm"]
dependencies = [
  "torch",
  "transformers>=4.48,<5",
  "peft>=0.13",
  "accelerate",
  "datasets",
  "numpy",
  "pandas",
  "tabulate",
  "matplotlib",
  "sympy",
  "tqdm",
  "safetensors",
]

[project.optional-dependencies]
serving = [
  "vllm",
]
eval = [
  "lighteval>=0.13",
]
dev = [
  "pytest",
  "tomli; python_version < '3.11'",
]
all = [
  "vllm",
  "lighteval>=0.13",
  "pytest",
  "tomli; python_version < '3.11'",
]

[project.scripts]
optimus = "optimus.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["optimus*"]

[tool.pytest.ini_options]
norecursedirs = ["external", "results", ".git", ".venv"]
